instances/ssp-instance/ssp-init/cm/cm-helm-template/statefuleset.yaml
# Source: ibm-ssp-cm/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-ibm-ssp-cm
  labels:
    app.kubernetes.io/name: ibm-ssp-cm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-ssp-cm-1.2.3
    release: release-name
    author: IBM
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ibm-ssp-cm
      app.kubernetes.io/instance: release-name
      author: IBM
  serviceName: release-name-ibm-ssp-cm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ibm-ssp-cm
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: ibm-ssp-cm-1.2.3
        release: release-name
        author: IBM

      annotations:        
        productID: "9b921dda8dd141bf8869ead1a790d4da"
        productName: "IBM Sterling Secure Proxy Certified Container"
        productVersion: "6.0.3"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: ""

    spec:
      serviceAccountName: release-name-ibm-ssp-cm-serviceaccount
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext: 
        
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        supplementalGroups:
        - 5555
      affinity:        
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:      
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:
      containers:
      - name: release-name-ibm-ssp-cm
        image: "cp.icr.io/cp/ibm-ssp-cm/ssp-cm-docker-image:6.0.3.0.02"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /spinstall/IBM/SPcm
          name: cm-pvc
          subPath: CM
        - mountPath: /cmConfig
          name: cm-config
        tty: false
        stdin: false
        securityContext:
            
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsUser: 1000

          # Set liveness probe to determine if CM is running
        livenessProbe:
          initialDelaySeconds: 200
          periodSeconds: 60
          timeoutSeconds: 30
          failureThreshold: 10
          exec:              
            command: 
            - bash
            - -c
            - monitorService.sh 8443
        # Set readiness probe to determine if CM is running
        readinessProbe: 
          initialDelaySeconds: 190
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 10
          exec:              
            command: 
            - bash
            - -c
            - monitorService.sh 8443             
        resources:
          limits:
              cpu: 1000m
              ephemeral-storage: 5Gi
              memory: 2Gi
          requests:
              cpu: 1000m
              ephemeral-storage: 3Gi
              memory: 2Gi
          
      # Create a volume which will be used while creating the container.
      # The volume claim needs to be created before using this volume.
      volumes:
      - name: cm-pvc
        persistentVolumeClaim:
          claimName: release-name-ibm-ssp-cm-pvc
      - name: cm-config 
        configMap:
          name: release-name-ibm-ssp-cm
      - name: cm-secret
        secret: 
          secretName:
