instances/ssp-instance/ssp-init/cm/cm-helm-template/networkpolicy.yaml
# Source: ibm-ssp-cm/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-ibm-ssp-cm
  labels:
    app.kubernetes.io/name: ibm-ssp-cm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-ssp-cm-1.2.3
    release: release-name
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-ssp-cm
      app.kubernetes.io/instance: release-name
  egress:
  - to: []
  ingress:
  - from: []
  policyTypes:
  - Ingress
  - Egress
